--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- HEADER -->
     <header>
       <div class="container">
         <div class="logo">
@@ -37,9 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html"
-                    >Invitados</a
-                  >
+                  <a href="../informacion/invitados.html">Invitados</a>
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
@@ -54,12 +53,13 @@
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <div class="main">
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="horarios.html">Horarios</a></li>
+            <li><a href="./horarios.html">Horarios</a></li>
           </ul>
         </div>
         <div class="titleBox">
@@ -506,14 +506,22 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
+            <img id="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              id="iconos"
+              src="../images/iconos/twitter.png"
+              alt="Icono Twitter"
+            />
             <img
               id="iconos"
               src="../images/iconos/facebook.png"
-              alt="Facebook"
+              alt="Icono Facebook"
             />
-            <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
+            <img
+              id="iconos"
+              src="../images/iconos/insta.png"
+              alt="Icono Instagram"
+            />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
