--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -10,17 +10,18 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Inscription-->
+    <!-- CSS Invitados-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
           <a href="../../index.html"
-            ><img src="../../images/plantilla/logo.png" alt="logo"
+            ><img src="../../images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
         <div class="navbar">
@@ -37,9 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html"
-                    >Invitados</a
-                  >
+                  <a href="../informacion/invitados.html">Invitados</a>
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
@@ -54,6 +53,7 @@
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <div class="main">
         <div class="content">
@@ -76,7 +76,7 @@
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="faky.html">FAKY</a></li>
+                <li><a href="./faky.html">FAKY</a></li>
               </ul>
             </div>
             <div class="titleBox">
@@ -206,21 +206,25 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               id="iconos"
               src="../../images/iconos/twitter.png"
-              alt="Twitter"
+              alt="Icono Twitter"
             />
             <img
               id="iconos"
               src="../../images/iconos/facebook.png"
-              alt="Facebook"
+              alt="Icono Facebook"
             />
             <img
               id="iconos"
               src="../../images/iconos/insta.png"
-              alt="Instagram"
+              alt="Icono Instagram"
             />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
