--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="logo">
           <a href="../../index.html"
-            ><img src="../../images/plantilla/logo.png" alt="logo"
+            ><img src="../../images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
         <div class="navbar">
@@ -37,7 +37,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html"
+                  <a  href="../informacion/invitados.html"
                     >Invitados</a
                   >
                   <a href="../informacion/actividades.html">Actividades</a>
@@ -151,21 +151,21 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img id="iconos" src="../../images/iconos/rss.png" alt="Icono RSS" />
             <img
               id="iconos"
               src="../../images/iconos/twitter.png"
-              alt="Twitter"
+              alt="Icono Twitter"
             />
             <img
               id="iconos"
               src="../../images/iconos/facebook.png"
-              alt="Facebook"
+              alt="Icono Facebook"
             />
             <img
               id="iconos"
               src="../../images/iconos/insta.png"
-              alt="Instagram"
+              alt="Icono Instagram"
             />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
