--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -16,11 +16,11 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
-          <a href="./index.html"
+          <a href="../index.html"
             ><img src="../images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
@@ -30,7 +30,6 @@
             <i></i>
             <i></i>
           </div>
-
           <ul id="nav-lists">
             <li class="close"><span onclick="Hide()">×</span></li>
             <li>
@@ -39,7 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html"
+                  <a  href="../informacion/invitados.html"
                     >Invitados</a
                   >
                   <a href="../informacion/actividades.html">Actividades</a>
@@ -170,5 +169,6 @@
     </footer>
     <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
+    <script src="../js/sidebar.js"></script>
   </body>
 </html>
