--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="./informacion/invitados.html">Invitados</a>
+                  <a  href="./informacion/invitados.html">Invitados</a>
                   <a href="./informacion/actividades.html">Actividades</a>
                   <a href="./informacion/concursos.html">Concursos</a>
                 </div>
@@ -56,7 +56,7 @@
     </header>
     <main>
       <div>
-        <img id="banner" src="./images/index/banner2.jpg" alt="logo" />
+        <img id="banner" src="./images/index/banner2.jpg" alt="Logo Manguca" />
       </div>
       <div class="main">
         <div class="content">
