--- a/informacion/footer/concursos.html
+++ b/informacion/footer/concursos.html
@@ -16,52 +16,44 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
+    <!-- NAVBAR -->
     <header>
-      <div class="header" id="header">
+      <div class="container">
         <div class="logo">
           <a href="../../index.html"
-            ><img src="../../images/plantilla/logo.png" alt="logo"
+            ><img src="../../images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
         <div class="navbar">
-          <div class="dropdown">
-            <button class="dropbtn">
-              Información &#9660;
-            </button>
-            <div class="dropdown-content">
-              <a href="../invitados.html">Invitados</a>
-              <a href="../actividades.html">Actividades</a>
-              <a href="../concursos.html">Concursos</a>
-            </div>
+          <div class="icon-bar" onclick="Show()">
+            <i></i>
+            <i></i>
+            <i></i>
           </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../horarios/horarios.html'"
-            >
-              Horarios
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="location.href='../../localizacion/localizacion.html'"
-            >
-              Localización
-            </button>
-          </div>
-          <div class="dropdown">
-            <button
-              class="dropbtn"
-              onclick="loc"location.href='../entradas/inscripcion.html'"
-            >
-              Entradas
-            </button>
-          </div>
+          <ul id="nav-lists">
+            <li class="close"><span onclick="Hide()">×</span></li>
+            <li>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  Información &#9660;
+                </button>
+                <div class="dropdown-content">
+                  <a href="../informacion/invitados.html">Invitados</a>
+                  <a href="../informacion/actividades.html">Actividades</a>
+                  <a href="../informacion/concursos.html">Concursos</a>
+                </div>
+              </div>
+            </li>
+            <li><a href="../../horarios/horarios.html">Horarios</a></li>
+            <li>
+              <a href="../../localizacion/localizacion.html">Localización</a>
+            </li>
+            <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
+          </ul>
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <div class="main">
         <div class="breadcrumb">
@@ -76,7 +68,7 @@
           </div>
         </div>
         <div class="content">
-          <button class="accordion1">
+          <button class="accordion">
             Asian Cover Dance
           </button>
           <div class="panel">
@@ -199,7 +191,7 @@
             </ul>
           </div>
 
-          <button class="accordion1">
+          <button class="accordion">
             Pop Culture Hiroshima
           </button>
           <div class="panel">
@@ -394,7 +386,7 @@
                   norma número 5.
                 </li>
               </ul>
-              <button class="accordion">
+              <button class="accordion1">
                 Confección
               </button>
               <div class="panel">
@@ -442,7 +434,7 @@
                   </li>
                 </ul>
               </div>
-              <button class="accordion">
+              <button class="accordion1">
                 Actuación e Interpretación
               </button>
               <div class="panel">
@@ -504,7 +496,7 @@
               </div>
             </div>
           </div>
-          <button class="accordion1">
+          <button class="accordion">
             Karaoke
           </button>
           <div class="panel">
@@ -563,7 +555,6 @@
                 </li>
               </ul>
             </div>
-
             <button class="accordion2">
               Interpretación
             </button>
@@ -620,8 +611,8 @@
         </div>
       </div>
     </main>
-     <!-- FOOTER -->
-     <footer>
+    <!-- FOOTER -->
+    <footer>
       <div class="footer">
         <div class="about">
           <div class="colabout">
@@ -649,21 +640,25 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               id="iconos"
               src="../../images/iconos/twitter.png"
-              alt="Twitter"
+              alt="Icono Twitter"
             />
             <img
               id="iconos"
               src="../../images/iconos/facebook.png"
-              alt="Facebook"
+              alt="Icono Facebook"
             />
             <img
               id="iconos"
               src="../../images/iconos/insta.png"
-              alt="Instagram"
+              alt="Icono Instagram"
             />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
@@ -673,5 +668,6 @@
     <!-- SCRIPTS -->
     <script src="../../js/acordeon.js"></script>
     <script src="../../js/scroll.js"></script>
+    <script src="../../js/sidebar.js"></script>
   </body>
 </html>
