--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -85,7 +85,7 @@
               />
             </div>
             <div class="col">
-              <label for="frmApellidos">Apellidos</label>
+              <label for="forApellidos">Apellidos</label>
               <input
                 type="text"
                 id="forApellidos"
@@ -103,7 +103,7 @@
               </select>
             </div>
             <div class="col">
-              <label for="fechaI">Dia Inicio</label>
+              <label for="fchIni">Dia Inicio</label>
               <input
                 required
                 type="date"
@@ -113,7 +113,7 @@
               />
             </div>
             <div class="col">
-              <label for="fechaF">Dia Fin</label>
+              <label for="fechaFin">Dia Fin</label>
               <input
                 required
                 type="date"
