--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -113,7 +113,7 @@
               />
             </div>
             <div class="col">
-              <label for="fechaFin">Dia Fin</label>
+              <label for="fchFin">Dia Fin</label>
               <input
                 required
                 type="date"
