--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <div>
-        <img id="banner" src="./images/index/banner2.jpg" alt="Logo Manguca" />
+        <img id="banner" src="./images/index/banner2.jpg" alt="Banner inicio" />
       </div>
       <div class="main">
         <div class="content">
