--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -71,7 +71,10 @@
           <div>
             <div class="artist">
               <a href="./invitados/faky.html">
-                <img id="miniature" src="../images/artistas/artist1.jpg"
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist1.jpg"
+                  alt="Invitadas FAKY"
               /></a>
               <div class="text">
                 <div id="rol">
@@ -90,7 +93,10 @@
             </div>
             <div class="artist">
               <a href="./invitados/kiki.html"
-                ><img id="miniature" src="../images/artistas/artist2.jpg"
+                ><img
+                  id="miniature"
+                  src="../images/artistas/artist2.jpg"
+                  alt="Invitada Kiki vivi lily"
               /></a>
               <div class="text">
                 <div id="rol">
@@ -107,10 +113,13 @@
                 </div>
               </div>
             </div>
-
             <div class="artist">
               <a href="./invitados/odashima.html">
-                <img id="miniature" src="../images/artistas/artist3.jpg" />
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist3.jpg"
+                  alt="Invitada Odashima"
+                />
               </a>
               <div class="text">
                 <div id="rol">
@@ -131,7 +140,10 @@
             <div>
               <div class="artist">
                 <a href="./invitados/shirogane.html">
-                  <img id="miniature" src="../images/artistas/artist4.jpg"
+                  <img
+                    id="miniature"
+                    src="../images/artistas/artist4.jpg"
+                    alt="Invitada Shirogane"
                 /></a>
                 <div class="text">
                   <div id="rol">
@@ -152,7 +164,10 @@
 
             <div class="artist">
               <a href="./invitados/sukisha.html"
-                ><img id="miniature" src="../images/artistas/artist5.jpg"
+                ><img
+                  id="miniature"
+                  src="../images/artistas/artist5.jpg"
+                  alt="Invitado Sukisha"
               /></a>
               <div class="text">
                 <div id="rol">
@@ -172,7 +187,11 @@
 
             <div class="artist">
               <a href=" ./invitados/laia.html">
-                <img id="miniature" src="../images/artistas/artist6.jpg" />
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist6.jpg"
+                  alt="Invitada Laia Lopéz"
+                />
               </a>
               <div class="text">
                 <div id="rol">
@@ -194,7 +213,11 @@
           <div>
             <div class="artist">
               <a href="./invitados/ginny.html">
-                <img id="miniature" src="../images/artistas/artist7.jpg" />
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist7.jpg"
+                  alt="Invitada Ginny Di"
+                />
               </a>
               <div class="text">
                 <div id="rol">
@@ -214,7 +237,11 @@
 
             <div class="artist">
               <a href="./invitados/meowri.html">
-                <img id="miniature" src="../images/artistas/artist9.jfif" />
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist9.jfif"
+                  alt="Invitada Jenna Lynn"
+                />
               </a>
               <div class="text">
                 <div id="rol">
@@ -234,7 +261,11 @@
 
             <div class="artist">
               <a href="./invitados/halex.html">
-                <img id="miniature" src="../images/artistas/artist8.jpg" />
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist8.jpg"
+                  alt="Invitada H.Alexander"
+                />
               </a>
               <div class="text">
                 <div id="rol">
@@ -256,7 +287,10 @@
           <div>
             <div class="artist">
               <a href="./invitados/ladybeard.html">
-                <img id="miniature" src="../images/artistas/artist10.jpg"
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist10.jpg"
+                  alt="Invitado Ladybeard"
               /></a>
               <div class="text">
                 <div id="rol">
@@ -275,7 +309,10 @@
             </div>
             <div class="artist">
               <a href="./invitados/overwatchvoices.html"
-                ><img id="miniature" src="../images/artistas/artist11.jpg"
+                ><img
+                  id="miniature"
+                  src="../images/artistas/artist11.jpg"
+                  alt="Invitadas/os voces de Overwatch"
               /></a>
               <div class="text">
                 <div id="rol">
@@ -295,7 +332,11 @@
 
             <div class="artist">
               <a href="./invitados/poltattoo.html">
-                <img id="miniature" src="../images/artistas/artist12.jfif" />
+                <img
+                  id="miniature"
+                  src="../images/artistas/artist12.jfif"
+                  alt="Invitado Pol Tatto"
+                />
               </a>
               <div class="text">
                 <div id="rol">
