--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -67,7 +67,7 @@
             <a href="./ginny.html">Ginni Di</a>
             <a href="./meowri.html">Jenna Lynn</a>
             <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./ladybeard.html">LadyBeard</a>
             <a href="./overwatchvoices.html">Voces de Overwatch</a>
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
@@ -86,7 +86,10 @@
             </div>
             <div class="information">
               <div class="picture">
-                <img src="../../images/artistas/artist1-avatar.jpg" />
+                <img
+                  src="../../images/artistas/artist1-avatar.jpg"
+                  alt="Icono FAKY"
+                />
               </div>
               <article>
                 <p>
@@ -104,6 +107,7 @@
                   <img
                     src="../../images/artistas/artist1-banner.jpg"
                     id="picture-article"
+                    alt="Imagen grupo FAKY"
                   />
                 </div>
                 <p>
@@ -117,12 +121,8 @@
 
                 <div class="iframe">
                   <iframe
-                    width="560"
-                    height="315"
                     src="https://www.youtube.com/embed/Um0Yk3ahDCA"
-                    frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
                   ></iframe>
                 </div>
                 <p>
