--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -10,12 +10,13 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Inscription-->
+    <!-- CSS Invitados-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
@@ -37,9 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a  href="../informacion/invitados.html"
-                    >Invitados</a
-                  >
+                  <a href="../informacion/invitados.html">Invitados</a>
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
@@ -54,6 +53,7 @@
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <div class="main">
         <div class="content">
@@ -67,7 +67,7 @@
             <a href="./ginny.html">Ginni Di</a>
             <a href="./meowri.html">Jenna Lynn</a>
             <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./ladybeard.html">LadyBeard</a>
             <a href="./overwatchvoices.html">Voces de Overwatch</a>
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
@@ -76,17 +76,20 @@
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="./ladybeard.html">Lady Beard</a></li>
+                <li><a href="./ladybeard.html">LadyBeard</a></li>
               </ul>
             </div>
             <div class="titleBox">
               <div id="title">
-                <span>Lady Beard</span>
+                <span>LadyBeard</span>
               </div>
             </div>
             <div class="information">
               <div class="picture">
-                <img src="../../images/artistas/artist10-avatar.jpg" />
+                <img
+                  src="../../images/artistas/artist10-avatar.jpg"
+                  alt="Icono LadyBeard"
+                />
               </div>
               <article>
                 <p>
@@ -102,6 +105,7 @@
                   <img
                     src="../../images/artistas/artist10-banner.jpeg"
                     id="picture-article"
+                    alt="Cosplay LadyBeard"
                   />
                 </div>
                 <p>
@@ -115,12 +119,8 @@
                 </p>
                 <div class="iframe">
                   <iframe
-                    width="560"
-                    height="315"
                     src="https://www.youtube.com/embed/M8-vje-bq9c"
-                    frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
                   ></iframe>
                 </div>
                 <table>
@@ -203,7 +203,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               id="iconos"
               src="../../images/iconos/twitter.png"
