--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -10,12 +10,13 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Inscription-->
+    <!-- CSS Invitados-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- NAVBAR-->
     <header>
       <div class="container">
         <div class="logo">
@@ -37,9 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a  href="../informacion/invitados.html"
-                    >Invitados</a
-                  >
+                  <a href="../informacion/invitados.html">Invitados</a>
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
@@ -54,6 +53,7 @@
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <div class="main">
         <div class="content">
@@ -67,7 +67,7 @@
             <a href="./ginny.html">Ginni Di</a>
             <a href="./meowri.html">Jenna Lynn</a>
             <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./ladybeard.html">LadyBeard</a>
             <a class="active" href="./overwatchvoices.html"
               >Voces de Overwatch</a
             >
@@ -88,7 +88,10 @@
             </div>
             <div class="information">
               <div class="picture">
-                <img src="../../images/artistas/artist11-avatar.jpg" />
+                <img
+                  src="../../images/artistas/artist11-avatar.jpg"
+                  alt="Icono Voces de Overwatch"
+                />
               </div>
               <article>
                 <p>
@@ -117,12 +120,8 @@
 
                 <div class="iframe">
                   <iframe
-                    width="560"
-                    height="315"
                     src="https://www.youtube.com/embed/UrfvQHbEocs"
-                    frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
                   ></iframe>
                 </div>
               </article>
@@ -160,7 +159,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               id="iconos"
               src="../../images/iconos/twitter.png"
