--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -10,7 +10,7 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../../css/layout.css" />
-    <!-- CSS Inscription-->
+    <!-- CSS Invitados-->
     <link rel="stylesheet" href="../../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
@@ -23,6 +23,7 @@
             ><img src="../../images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
+        <!-- NAVBAR -->
         <div class="navbar">
           <div class="icon-bar" onclick="Show()">
             <i></i>
@@ -37,9 +38,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a  href="../informacion/invitados.html"
-                    >Invitados</a
-                  >
+                  <a href="../informacion/invitados.html">Invitados</a>
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
@@ -54,6 +53,7 @@
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <div class="main">
         <div class="content">
@@ -67,7 +67,7 @@
             <a href="./ginny.html">Ginni Di</a>
             <a href="./meowri.html">Jenna Lynn</a>
             <a href="./halex.html">H. Alexander</a>
-            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./ladybeard.html">LadyBeard</a>
             <a href="./overwatchvoices.html">Voces de Overwatch</a>
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
@@ -86,7 +86,10 @@
             </div>
             <div class="information">
               <div class="picture">
-                <img src="../../images/artistas/artist4-avatar.jpg" />
+                <img
+                  src="../../images/artistas/artist4-avatar.jpg"
+                  alt="Icono Shirogane"
+                />
               </div>
               <article>
                 <p>
@@ -102,6 +105,7 @@
                   <img
                     src="../../images/artistas/artist4-banner.jpg"
                     id="picture-article"
+                    alt="Imagen cosplay Shirogane"
                   />
                 </div>
                 <p>
@@ -116,12 +120,8 @@
                 </p>
                 <div class="iframe">
                   <iframe
-                    width="560"
-                    height="315"
                     src="https://www.youtube.com/embed/bk98SfjtAA4"
-                    frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
                   ></iframe>
                 </div>
                 <p>
@@ -166,7 +166,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               id="iconos"
               src="../../images/iconos/twitter.png"
