--- a/informacion/noticias/noticia1.html
+++ b/informacion/noticias/noticia1.html
@@ -38,9 +38,9 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a href="../informacion/invitados.html">Invitados</a>
-                  <a href="../informacion/actividades.html">Actividades</a>
-                  <a href="../informacion/concursos.html">Concursos</a>
+                  <a href="../invitados.html">Invitados</a>
+                  <a href="../actividades.html">Actividades</a>
+                  <a href="../concursos.html">Concursos</a>
                 </div>
               </div>
             </li>
@@ -57,6 +57,8 @@
     <main>
       <div class="main">
         <div class="content">
+          <div class="titleBox"></div>
+         <div class="text">
           <article>
             <p>
               Se reportó el fallecimiento del actor de voz Hiroshi Masuoka
@@ -92,6 +94,7 @@
             <p>
               Que descanse en paz.
             </p>
+         </div>
           </article>
         </div>
       </div>
